@@ -1,2 +1,5 @@
+# Unreleased
+- [patch][change] Fix examples and `README.md` for updated crate name.
+
 # Version 0.1.0 - 2023-08-07
 - [minor][add] Add `GitAuthenticator` struct for authentication with `git2`.
